# guiext-template

./: MANIFEST.in  README.md  demo.py  pyproject.toml  setup.py
taipy_gui_ext_library/: __init__.py  library.py
taipy_gui_ext_library/front-end/: .gitignore  package.json  webpack.config.js
taipy_gui_ext_library/front-end/src/: Element.tsx
taipy_gui_ext_library/frontend/: webpack.config.js
taipy_gui_ext_library/frontend/scripts/: install.js
taipy_gui_ext_library/frontend/src/: Element.tsx
