[build-system]
requires = [ "setuptools" ]

[project]
name = "taipy_gui_ext_library"
version = "1.0.0"
authors = [ { name = "You Name", email = "your@email.domain" } ]
description = "A Taipy GUI extension library."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
keywords = [ "taipy" ]
license = { text = "Apache License 2.0" }
classifiers = [
    "Intended Audience :: Developers",
    # "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [ "taipy-gui>=2.0" ]
